--- a/src/Components/ProductCard/styles.scss
+++ b/src/Components/ProductCard/styles.scss
@@ -2,24 +2,41 @@
 
 .cardContainer {
     display: flex;
-    flex-direction: column;
-    border: 4px solid variables.$primary;
-    height: 250px;
-    width: 250px;
+    flex-direction: row;
+    // padding-top: 80px;
+    width: 100%;
 
-    .cardHeader {
-
-    }
-
-    .cardPicture {
-
-    }
-
-    .cardBody {
-
-    }
-
-    .cardFooter {
+    .card {
+        display: flex;
+        flex-direction: column;
+        width: 250px;
+        border: 4px solid variables.$primary;
         
+        .cardHeader {
+            text-align: center;
+            border-bottom: 4px solid variables.$primary;
+        }
+
+        .cardImageContainer {
+            text-align: center;
+
+
+            .cardImage {
+                width: 150px;
+                height: 150px;
+                
+            }
+            
+        }
+
+        .cardBody {
+            border-bottom: 4px solid variables.$primary;
+            
+        }
+        
+        .cardFooter {
+            text-align: center;
+            
+        }
     }
 }
