--- a/src/Views/Product/styles.scss
+++ b/src/Views/Product/styles.scss
@@ -1,7 +1,7 @@
-.bundleContainer {
+.productContainer {
     display: flex;
+    flex-direction: column;
+    height: 100vh;
     justify-content: center;
     align-items: center;
-    color: black;
-    height: 100vh;
 }
