--- a/src/Views/Cart/styles.scss
+++ b/src/Views/Cart/styles.scss
@@ -2,36 +2,7 @@
     padding-top: 100px;
     display: flex;
     flex-direction: column;
+    align-items: center;
     height: 100vh;
-    gap: 2em;
-}
-
-.cartItem {
-    display: flex;
-    flex-direction: row;
-    height: 50px;
-    width: fit-content;
-    border: 5px solid black;
-    
-    .cartName {
-        display: flex;
-        align-items: center;
-        padding: 0px 10px 0px 10px;
-        border-left: 5px solid black;
-        border-right: 5px solid black;
-    }
-
-    .cartImg {
-        padding: 0px 10px 0px 10px;
-        .cI {
-            height: 50px;
-            width: 50px;
-        }
-    }
-
-    .cartPrice {
-        display: flex;
-        align-items: center;
-        padding: 0px 10px 0px 10px;
-    }
+    // gap: 2em;
 }
