--- a/src/Components/ProductCard/styles.scss
+++ b/src/Components/ProductCard/styles.scss
@@ -15,6 +15,7 @@
         .cardHeader {
             text-align: center;
             border-bottom: 4px solid variables.$primary;
+            font-weight: bold;
         }
 
         .cardImageContainer {
