--- a/src/Views/Bundles/styles.scss
+++ b/src/Views/Bundles/styles.scss
@@ -1,7 +1,10 @@
 .bundleContainer {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    color: black;
-    height: 100vh;
+    padding-top: 10em;
+    gap: 2em;
+    width: 100%;
+    padding-bottom: 10em;
 }
