--- a/src/Components/ProductAddedModal/styles.scss
+++ b/src/Components/ProductAddedModal/styles.scss
@@ -1,8 +1,46 @@
+@use "../../Styles/variables";
+
 
 .pamContainer {
     display: flex;
-    position: absolute;
     justify-content: center;
     align-items: center;
-    bottom: -100;
+    background-color: white;
+    border: 4px solid variables.$primary;
+    color: variables.$primary;
+    box-shadow: 0 0 0 1px variables.$thirdary;
+    font-weight: bold;
+    border-radius: 8px;
+    padding: 1.2em;
+    animation: addzy 2s ease-in-out forwards;
+    position: absolute;
+    top: 0;
+}
+
+.panNone {
+    position: absolute;
+    height: 0;
+    width: 0;
+    visibility: hidden;
+    display: none;
+}
+
+@keyframes addzy {
+    0% {
+        transform: translateY(175%);
+        opacity: 0;
+    }
+
+    30% {
+        opacity: 1;
+    }
+
+    80% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+        transform: translateY(175%)
+    }
 }
