--- a/src/Views/Products/styles.scss
+++ b/src/Views/Products/styles.scss
@@ -50,6 +50,7 @@
 
     .cardFooter {
         display: flex;
+        border-top: 5px solid variables.$thirdary;
         background-color: variables.$primary;
         color: white;
         padding: 10px;
