--- a/src/Components/AboutSection/styles.scss
+++ b/src/Components/AboutSection/styles.scss
@@ -3,7 +3,9 @@
 .ASContainer {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    padding-top: 120px;
+    padding-bottom: 120px;
+    height: 100%;
     justify-content: center;
     align-items: center;
     padding-left: 20%;
@@ -17,7 +19,7 @@
     }
 
     .asBody {
-        font-size: 1.4em;
+        font-size: 1.2rem;
     }
 
     .inspQ1 {
