--- a/src/Components/ViewProduct/styles.scss
+++ b/src/Components/ViewProduct/styles.scss
@@ -4,8 +4,8 @@
 .vpC {
     display: flex;
     flex-direction: column;
-    // height: 100vh;
     justify-content: center;
+    padding-top: 100px;
     align-items: center;
 
     .vpH {
