--- a/src/Views/Cart/styles.scss
+++ b/src/Views/Cart/styles.scss
@@ -5,7 +5,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 100%;
+    padding-top: 100px;
+    // height: 100vh;
 
 
     .cartTotal {
